Form Default Date and Format Date in City List
Styling changes
Cleaned up SCSS

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "WEATHER_APP": "Weather App",
   "FORM": "Form",
-  "LIST_OF_CITIES": "List of Cities"
+  "LIST_OF_CITIES": "List of Cities",
+  "LANGUAGE": "Language"
 }
