--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,5 +1,6 @@
 {
   "WEATHER_APP": "Aplicativo de Clima",
   "FORM": "Formulário",
-  "LIST_OF_CITIES": "Lista de Cidades"
+  "LIST_OF_CITIES": "Lista de Cidades",
+  "LANGUAGE": "Língua"
 }
