Revert "Home Component Translated and Animated"
This reverts commit 58d1725f750c5fe8534b765411737c1a21b47471.

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,27 +1,6 @@
 {
-  "WEATHER_APP": "Aplicação Climatérica",
+  "WEATHER_APP": "Aplicativo de Clima",
   "FORM": "Formulário",
   "LIST_OF_CITIES": "Lista de Cidades",
-  "ENGLISH": "Inglês",
-  "PORTUGUESE": "Português",
-  "SPANISH": "Espanhol",
-  "FRENCH": "Francês",
-  "GERMAN": "Alemão",
-  "ITALIAN": "Italiano",
-  "HOME": "Início",
-  "LIST": "Lista de Cidades",
-  "CITY_NAME": "Nome da Cidade",
-  "CITY_NAME_INVALID":"O nome da cidade é obrigatório.",
-  "TEMPERATURE": "Temperatura",
-  "TEMPERATURE_INVALID":"Temperatura tem de ser entre -100ºC e 70ºC (-150ºF e 160ºF).",
-  "SELECT":"Selecione",
-  "YES":"Sim",
-  "NO":"Não",
-  "RAINING": "Chove?",
-  "RAINING_INVALID":"Estado da chuva obrigatório.",
-  "DATE":"Data",
-  "DATE_INVALID":"Data obrigaória.",
-  "NETWORK_POWER":"Nível de Rede (1-5)",
-  "NETWORK_POWER_INVALID":"Nível da rede tem de ser entre 1 e 5.",
-  "LANGUAGE": "Linguagem"
+  "LANGUAGE": "Língua"
 }
